--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     </header>
     <main>
         <!-- Hero section -->
-        <section>
-            <h1> Effective Solutions for Your Business </h1>
-            <button type="button"> Order Service  </button>
+        <section class="hero-section">
+            <h1 class="hero-section-text"> Effective Solutions for Your Business </h1>
+            <button type="button" class="button">Order Service</button>
         </section>
         <!-- Our Benefits -->
         <section>
@@ -97,6 +97,10 @@
                     <p>UI Designer</p>
                 </li>
             </ul>
+        </section>
+        <section>
+            <h2>Our Portfolio</h2>
+
         </section>
     </main>
     <!-- Footer -->
