--- a/index.html
+++ b/index.html
@@ -51,50 +51,50 @@
             <h2>Advantages</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+                    <h3 class="advantages">Strategy</h3>
+                    <p class="advantages-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="advantages">Punctuality</h3>
+                    <p class="advantages-text">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <h3 class="advantages">Diligence</h3>
+                    <p class="advantages-text">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="advantages">Technologies</h3>
+                    <p class="advantages-text">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
         </section>
         <!-- Our team -->
-        <section>
-            <h2>Our Team</h2>
+        <section class="team">
+            <h2 class="our-team">Our Team</h2>
             <ul>
                 <li>
                     <img src="images/img-3.jpg" alt="Mark Guerrero photo" width=264 height=260>
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-member">Mark Guerrero</h3>
+                    <p class="job-title">Product Designer</p>
                 </li>
                 <li>
                     <img src="images/img-2.jpg" alt="Tom Ford photo" width=264 height=260>
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-member">Tom Ford</h3>
+                    <p class="job-title">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="images/img-1.jpg" alt="Camila Garcia photo" width=264 height=260>
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-member">Camila Garcia</h3>
+                    <p class="job-title">Marketing</p>
                 </li>
                 <li>
                     <img src="images/img.jpg" alt="Daniel Wilson photo" width=264 height=260>
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-member">Daniel Wilson</h3>
+                    <p class="job-title">UI Designer</p>
                 </li>
             </ul>
         </section>
