--- a/index.html
+++ b/index.html
@@ -76,22 +76,22 @@
         <section class="team">
             <h2 class="our-team">Our Team</h2>
             <ul>
-                <li>
+                <li class="team-member-card">
                     <img src="images/img-3.jpg" alt="Mark Guerrero photo" width=264 height=260>
                     <h3 class="team-member">Mark Guerrero</h3>
                     <p class="job-title">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-member-card">
                     <img src="images/img-2.jpg" alt="Tom Ford photo" width=264 height=260>
                     <h3 class="team-member">Tom Ford</h3>
                     <p class="job-title">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-member-card">
                     <img src="images/img-1.jpg" alt="Camila Garcia photo" width=264 height=260>
                     <h3 class="team-member">Camila Garcia</h3>
                     <p class="job-title">Marketing</p>
                 </li>
-                <li>
+                <li class="team-member-card">
                     <img src="images/img.jpg" alt="Daniel Wilson photo" width=264 height=260>
                     <h3 class="team-member">Daniel Wilson</h3>
                     <p class="job-title">UI Designer</p>
