--- a/index.html
+++ b/index.html
@@ -99,8 +99,39 @@
             </ul>
         </section>
         <section>
-            <h2>Our Portfolio</h2>
-
+            <h2 class="portfolio-title">Our Portfolio</h2>
+<ul>
+    <li class="portfolio-list">
+        <img src="./images/portfoilio-img-1.jpg" alt="Banking App image" width=360 >
+        <h3 class="portfoilo-item">Banking App</h3>
+        <p class="domain">App</p>
+    </li>
+    <li class="portfolio-list">
+        <img src="./images/portfoilio-img-2.jpg" alt="Cashless Payment image"width=360 >
+        <h3 class="portfoilo-item">Cashless Payment</h3>
+        <p class="domain">Marketing</p>
+    </li>
+    <li class="portfolio-list">
+        <img src="./images/portfoilio-img-3.jpg" alt="Meditation App image" width=360 >
+        <h3 class="portfoilo-item">Meditation App</h3>
+        <p class="domain">App</p>
+    </li>
+    <li class="portfolio-list">
+        <img src="./images/portfoilio-img-4.jpg" alt="Taxi Service image" width=360 >
+        <h3 class="portfoilo-item">Taxi Service</h3>
+        <p class="domain">Marketing</p>
+    </li>
+    <li class="portfolio-list">
+        <img src="./images/portfoilio-img-5.jpg" alt="Screen Illustrations image" width=360 >
+        <h3 class="portfoilo-item">Screen Illustrations</h3>
+        <p class="domain">Design</p>
+    </li>
+    <li class="portfolio-list">
+        <img src="./images/portfoilio-img-6.jpg" alt="Online Courses image" width=360 >
+        <h3 class="portfoilo-item">Online Courses</h3>
+        <p class="domain">Marketing</p>
+    </li>
+</ul>
         </section>
     </main>
     <!-- Footer -->
@@ -108,7 +139,7 @@
         
         <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span> </a>
 
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 
